--- a/data/skiareas.json
+++ b/data/skiareas.json
@@ -5,7 +5,7 @@
     "geo" : "48.4275600,9.3009800",
     "visits": "~",
     "years": "1991",
-    "imgId":""
+    "imgId":"0"
     },
 {
     "id" : "1",
@@ -13,6 +13,6 @@
     "geo" : "46.816667, 8.400000",
     "visits": "17",
     "years": "2013",
-    "imgId":""
+    "imgId":"1"
     }
 ]
